--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,10 +1,10 @@
 html,
 body {
-    height: 100%;
+    // height: 100%;
 }
 
 .wrap {
-    min-height: 100%;
+    // min-height: 100%;
     height: auto;
     margin: 0 auto -60px;
     padding: 0 0 60px;
@@ -108,4 +108,7 @@ a.desc:after {
 }
 body {
     background: #f5f5f5;
+}
+.table-hover > tbody > tr:hover {
+    background-color: #FFFFFF;
 }
